フォルダ構成を作成した

--- a/TodoCLI_CS/TodoCLI_CS.csproj
+++ b/TodoCLI_CS/TodoCLI_CS.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\DTOs\" />
+    <Folder Include="Application\Servicies\" />
+    <Folder Include="Domain\Entities\" />
+    <Folder Include="Domain\VOs\" />
+    <Folder Include="Domain\Repositories\" />
+    <Folder Include="Infrastructure\Repositories\" />
+    <Folder Include="data\" />
+  </ItemGroup>
+
 </Project>
